--- a/_config.yml
+++ b/_config.yml
@@ -34,7 +34,7 @@ author:
   arxiv            : # URL - Update with the correct link to your profile
   googlescholar    : "https://scholar.google.co.uk/citations?user=ueabtCEAAAAJ&hl=en"
   impactstory      : # URL
-  orcid            : "http://orcid.org/0000-0002-6221-3533"
+  orcid            : "https://orcid.org/0000-0002-6221-3533"
   semantic         : # URL
   pubmed           : # URL
   researchgate     : "https://www.researchgate.net/profile/Paul-Mann-2"
